--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "async": "0.2.10",
     "binary-search-tree": "0.2.5",
     "localforage": "^1.3.0",
+    "lodash": "^4.17.5",
     "mkdirp": "~0.5.1",
-    "underscore": "~1.4.4"
+    "underscore": "~1.4.4",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "chai": "^3.2.0",
@@ -35,7 +37,7 @@
     "commander": "1.1.1"
   },
   "scripts": {
-    "test": "./node_modules/.bin/mocha --reporter spec --timeout 10000"
+    "test": "./node_modules/.bin/mocha --reporter spec --timeout 10000 --bail"
   },
   "main": "index",
   "browser": {
